# mezcla

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.txt  TODO.txt  __init__.py  _temp-user-docker.env  local-workflows.sh  non-binary-requirements.txt  opt-requirements.txt  packages-required.txt  pip-freeze-devel.list  pip-freeze-production.list  pyproject.toml  required-packages.txt  requirements.txt  run_tests.bash  setup.py  simple_main_example.py  test_filter_random.py  tox.ini
.github/: CODEOWNERS  copilot-instructions.md
docs/: conf.py  copilot-cli-cheatsheet.md  index.rst
faiss/: index.faiss  index.pkl
mezcla/: None  TODO.md  __init__.py  __main__.py  _json_utils.py  _soft_assertion.py  adaptive_log_filter.py  analyze_tfidf.py  audio.py  bash_ast.py  bert_multi_classification.py  bert_text_classification.py  bing_search.py  check_html_javascript.py  compute_tfidf.py  convert_emoticons.py  convert_plasma_config.py  cut.py  cut.py.old  cut_new.py  data_utils.py  debug.py  evaluate_example_tests.py  extended_validation.py  extract_document_text.py  file_utils.py  filter_random.py  format_profile.py  gensim_test.py  glue_helpers.py  google_word2vec.py  gpu_utils.py  html_converter.py  html_utils.py  introspection.py  ipython_utils.py  kenlm_example.py  keras_param_search.py  llm_desktop_search.py  main.py  (+38 more)
requirements/: development.txt  optional.txt  production.txt
tests/: template.py  test_debug.py  test_gensim_test.py  test_glue_helpers.py  test_main.py
tomas_misc/: __init__.py  analyze_tfidf.py  compute_tfidf.py  cut.py  data_utils.py  (+24 more)
(+223 files in other folders)
