## TODO: eliminate redundancy

[tool.poetry]
name = "mezcla"
version = "1.4.0.5"
description = "Miscellaneous Python scripts developed over the course of several independent consulting projects. [Mezcla is Spanish for mixture.]"
authors = ["Tom O'Hara <tomasohara@gmail.com>"]
license = "LGPLv3"
## TODO:
## packages = ['mezcla', 'mezcla.tfidf']

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
realpython = "mezcla.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"

[tool.flit.metadata]
## note: information taken from setup.py
module = "mezcla"
license = "LGPLv3"
author="Tomás O'Hara"
author-email="tomasohara@gmail.com"
home-page = "https://github.com/tomasohara/mezcla"
description-file="README.txt"

[tool.mypy]
disable_error_code = [
    "import-untyped",
    "import-not-found"
]
exclude = [
    "(examples|tests|adhoc|temp)/",
    "__init__"
]
[[tool.mypy.overrides]]
module = [
    "mezcla"
]